name:                tsk
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tsk#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  c-sources:           src/TSK/Internal/Base.c
                     , src/TSK/Internal/DiskImage.c
                     , src/TSK/Internal/FileSystem.c
                     , src/Util/CStream.c
  -- FIXME!!!
  cc-options:          -Wall -pthread
  extra-libraries:     tsk
  exposed-modules:     TSK
                     , TSK.Internal.Base
                     , TSK.Internal.Callback
                     , TSK.Internal.DiskImage
                     , TSK.Internal.Volume
                     , TSK.Internal.Exception
                     , TSK.Internal.FileSystem
                     , TSK.Internal.Types
                     , TSK.Internal.TH
                     , TSK.Internal.Util
                     , Util.CStream
  include-dirs:        src/TSK/Internal/
  build-depends:       base >= 4.7 && < 5
                     , inline-c >= 0.5.6.1
                     , unix
                     , resourcet >= 1.1.9  
                     , bytestring
                     , text
                     , containers
                     , data-flags
                     , time
  default-language:    Haskell2010

executable tsk-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tsk
  default-language:    Haskell2010

test-suite disk-image-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             DiskImageTest.hs
  build-depends:       base
                     , tsk
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tsk
